# SparkleHelper

./: .gitignore  .gitmodules  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
examples/demo_app/: Info.plist.template  README.md  build.spec  demo.py
examples/qt_demo_app/: README.md  build.spec  demo_qt.py
scripts/: sync_native_deps.py
src/sparklehelper/: __init__.py  _framework.py  _nuitka_plugin.py  errors.py  sparklehelper.nuitka-package.config.yml  types.py  updater.py
src/sparklehelper/_backend/: __init__.py  base.py
src/sparklehelper/_backend/_macos/: __init__.py  _backend.py  _delegates.py  _loading.py  _runtime.py
src/sparklehelper/_backend/_windows/: __init__.py  _backend.py  _bindings.py  _loading.py
src/sparklehelper/_pyinstaller/: __init__.py  hook-sparklehelper.py
src/sparklehelper/winsparkle/: winsparkle.h
tests/: conftest.py  test_bridge.py  test_delegates.py  test_errors.py  test_framework.py  test_nuitka.py  test_objc.py  test_types.py  test_updater.py  test_updater_windows.py  test_windows.py
